Fixed modal alignment

--- a/src/App.css
+++ b/src/App.css
@@ -149,7 +149,7 @@ body {
 }
 #pic-input {
   position: absolute;
-  left: 39.6%;
+  left: 39.999%;
   top: 10.75%;
   display: flex;
   flex-direction: column;
